Extensions: Removing a repo can delete user data #119481

Closed
opened 2024-03-14 18:10:53 +01:00 by Harley Acheson · 0 comments
Member

System Information
Operating system: Windows 11
Graphics card: NVIDIA GeForce RTX 4080

Blender Version
Broken: main

Short description of error
Removing a local repository can remove unrelated user files

Exact steps for others to reproduce the error

Add New Local Repository

image

On the resulting dialog...

image

The above "Custom Directory" browsing lets you select any existing folder on your system. With that knowledge, and other cues on this dialog, it would be a fair assumption that clicking "OK" will either add some files to the specified "d:\test" folder or create a new folder in it, probably called "My Repository".

Clicking OK results in a errors to the console and the following message on the page:

image

Note that in the above message the "folder with file" is the name of a folder that I placed in that D:\test directory for testing purposes. Although this is the only item mentioned here, there were other test items in the same folder.

Afterward though my new repository is in the list. And I can select to remove it:

image

It DOES give you a warning:

image

Although it isn't really just going to "Remove Extension Repository" as the title suggests, so this requires reading of the message content. The button text of "Remove Repository and Files" implies that this will only remove files related to the repository.

But of course it removes all files in all folders and subfolders in D:\test. As in this could contain all of a users documents and valuable files.

I'm not seeing anything in the above steps that makes it obvious that all files in the folder it has you select are in danger of deletion. And these are DELETED, not recycled.

And since we allow download of installation zip files, not just installers, we can have users who do not have to accept EULA terms before installation. So this could leave us a bit vulnerable.

**System Information** Operating system: Windows 11 Graphics card: NVIDIA GeForce RTX 4080 **Blender Version** Broken: main **Short description of error** Removing a local repository can remove unrelated user files **Exact steps for others to reproduce the error** Add New Local Repository ![image](/attachments/f035899b-5042-4fb2-986d-265db6b1cbd0) On the resulting dialog... ![image](/attachments/e2d453fe-3ed9-4e1a-beed-24d541d3d926) The above "Custom Directory" browsing lets you select any **existing** folder on your system. With that knowledge, and other cues on this dialog, it would be a fair assumption that clicking "OK" will either add some files to the specified "d:\test\" folder or create a new folder in it, probably called "My Repository". Clicking OK results in a errors to the console and the following message on the page: ![image](/attachments/0a248c47-72f8-4fc7-ad1a-54f608bc37c5) Note that in the above message the "folder with file" is the name of a folder that I placed in that D:\test directory for testing purposes. Although this is the only item mentioned here, there were other test items in the same folder. Afterward though my new repository is in the list. And I can select to remove it: ![image](/attachments/6048867a-9017-47e2-9263-85fa8d80c4e3) It DOES give you a warning: ![image](/attachments/09d6f63a-6916-4351-933d-c8524796c9ef) Although it isn't really just going to "Remove Extension Repository" as the title suggests, so this requires reading of the message content. The button text of "Remove Repository and Files" implies that this will only remove files related to the repository. But of course it removes **all files in all folders and subfolders** in D:\test. As in this could contain all of a users documents and valuable files. I'm not seeing anything in the above steps that makes it obvious that all files in the folder it has you select are in danger of deletion. And these are DELETED, not recycled. And since we allow download of installation zip files, not just installers, we can have users who do not have to accept EULA terms before installation. So this could leave us a bit vulnerable.
Harley Acheson added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2024-03-14 18:10:54 +01:00
Richard Antalik added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-03-14 19:47:49 +01:00
Campbell Barton self-assigned this 2024-03-20 08:58:38 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-21 01:45:13 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119481
No description provided.